--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,6 @@ img {
   border-bottom: groove;
 }
 
-
 .form-control {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -71,7 +70,21 @@ label {
   min-width: 120px;
 }
 
-
 .logo-image {
   transform: translate(-50%, -50%);
+}
+
+.single-view-btn-group {
+  margin-top: 10px;
+}
+
+div.single-view-btn-group {
+  margin-bottom: 20px;
+  padding-left: 15px;
+}
+
+div.single-view-btn-group button {
+  min-width: 100px;
+  margin-right: 20px;
+  margin-bottom: 10px;
 }
